[build-system]
requires = ["flit_core >=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "vmr"
authors = [
    {name = "Bertold Sedlak", email = "berti.sedlak@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version", "description"]

dependencies = [
]


## Uncomment if using an entrypoint script
# [project.scripts]
# vmr = "Entrypoint"


[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "black",
    "isort",
    "mypy",
    "flit",
    "invoke",
    "pip-tools",
    "ruff",
    "ipdb",
]

[project.urls]
Source = "https://replace_me"

[tool.pytest.ini_options]
testpaths = "tests"
minversion = "7.0"
addopts = [
    "--setup-show",
    "-ra", # explanation of anything but passed
    "--showlocals",
    "--strict-config",
    ]
log_format = "[pytest][%(asctime)s][%(levelname)s][%(module)s] %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "[pytest][%(asctime)s][%(levelname)s][%(module)s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_level = "INFO"

[tool.black]
line-length = 120
target-version = ['py39']
ignore = "E203"
include = '\.pyi?$'

[tool.isort]
profile = "black"


[tool.mypy]
ignore_missing_imports = true


[tool.ruff]
line-length = 120

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
